fixed overflow problem in tooltip

--- a/src/components/tooltip/tooltip.css
+++ b/src/components/tooltip/tooltip.css
@@ -8,6 +8,7 @@
 	justify-content: center;
 	align-items: center;
 	width: auto;
+    min-width: max-content;
 
 	position: absolute;
 	top: calc(100% + var(--tooltip-offset));
